Jacoco report not running (#37)
* Jacoco report wasn't running in drone because it binds by default to verify phase, which is package phase in maven default lifecycle: https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html#default-lifecycle

* Added OpenPojo automatic testing to increase coverage above 80% threshold

Co-authored-by: Taoufik Mohdit <taoufik.mohdit@digital.homeoffice.gov.uk>